--- a/ClipboardDemo/ClipboardDemo.vcxproj.filters
+++ b/ClipboardDemo/ClipboardDemo.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Dialog1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ClipboardDemo.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Dialog1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
